@@ -25,7 +25,7 @@
   <parent>
     <groupId>com.ngdata</groupId>
     <artifactId>hbase-indexer</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <version>1.4-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
 
@@ -114,6 +114,10 @@
         </property>
       </activation>
 
+      <properties>
+        <log4j.properties.file>log4j-0.94.properties</log4j.properties.file>
+      </properties>
+
       <dependencies>
         <dependency>
           <groupId>org.apache.hbase</groupId>
@@ -137,6 +141,11 @@
           <value>0.95</value>
         </property>
       </activation>
+
+
+      <properties>
+        <log4j.properties.file>log4j-0.95.properties</log4j.properties.file>
+      </properties>
 
       <dependencies>
         <dependency>
@@ -166,6 +175,20 @@
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>-Xmx512m -XX:MaxDirectMemorySize=256m -XX:MaxPermSize=128M</argLine>
+          <environmentVariables>
+            <MALLOC_ARENA_MAX>4</MALLOC_ARENA_MAX>
+          </environmentVariables>
+          <systemPropertyVariables>
+            <log4j.configuration>file:${project.build.testOutputDirectory}/${log4j.properties.file}</log4j.configuration>
+          </systemPropertyVariables>
+        </configuration>
+      </plugin>
+      
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
